6 February 2008
+ Combined and pared style sheets.
+ Fixed convert function to use proper variable
+ Style changes to admin document form

5 February 2008
+ Added duration and embedded column to multimedia table.
+ File deletions moved to File_Common (commonDelete) to reduce overlap
+ Each file type deletes it file association as well.
+ Resize code is now using the define for its directory.
+ Folder deletion now deletes any associations.
+ Size default in File_Common is zero not null.
+ Error check added to pickFile function.
+ Added the option to add embedded videos to multimedia folders.
+ resizePath broken into getResizePath and makeResizePath
+ Removed some unnecessary code.
+ loadVideoDimensions is now just loadDimensions.
+ Resize directory is now in the folder containing the image. Removed
  define from config file.
+ Added youtube filters.

1 February 2008
+ getFile returns actually object. getTag returns just content.
+ getResize function can be set to return with a link to the parent
  image.

30 January 2008
+ Added image, document, media only commands to isolated what is
  allowed to place.
+ Fixed the clip functionality
+ Fixed the edit folder functionality
+ Added image captioning
+ Added function to convert images to file associations for module
  conversion.
+ Added parameters to importpost to ignore empty file submissions and
  to ignore folder ids if used outside filecabinet.
+ Image descriptions are now encoded and basic emphasis and bold tags
  are allowed.
+ All upload and edit links should be correct now.
+ Removed border from image tag.
+ New icon for shockwave files.


28 January 2008
+ getFile has second parameter to forgo style from file cabinet
+ Increase document upload size.
+ Fixed file assoc's image resize code.
+ Fixed button vs link in file cabinet's admin screens
+ Lightened border on image thumbs
+ Fixed the button links in the admin screens
+ Folder title opens the folder edit page if permissioned