@@ -1,8 +1,10 @@
-function oversized(image_id) {
+function oversized(image_id, force_resize) {
     if (confirm(confirm_message)) {
         file_type = 7;
-    } else {
+    } else if (!force_resize) {
         file_type = 1;
+    } else {
+        return false;
     }
 
     window.location.href = 'index.php?module=filecabinet&fop=pick_file&mw=' + mw + '&mh=' + mh + 
